--- a/src/09-complex-application/index.html
+++ b/src/09-complex-application/index.html
@@ -3,8 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
+    <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
+
+<div id="signals-container">
+    Aquí se renderiza el componente dinámicamente...
+</div>
 
 <script src="dist/bundle.js"></script>
 
